--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,8 @@
     <meta name="apple-mobile-web-app-title" content="eat_me">
     <link rel="apple-touch-icon" href="/icons/Icon-192.png">
 
+    <link rel="shortcut icon" type="image/icon" href="/icons/Icon-192.png">
+
     <title>Eat Me - Preventing food waste.</title>
     <link rel="manifest" href="/manifest.json">
 </head>
