moved icons to assets folder

--- a/web/index.html
+++ b/web/index.html
@@ -9,9 +9,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="eat_me">
-    <link rel="apple-touch-icon" href="/icons/Icon-192.png">
+    <link rel="apple-touch-icon" href="/assets/icons/Icon-192.png">
 
-    <link rel="shortcut icon" type="image/icon" href="/icons/Icon-192.png">
+    <link rel="shortcut icon" type="image/icon" href="/assets/icons/Icon-192.png">
 
     <title>Eat Me - Preventing food waste.</title>
     <link rel="manifest" href="/manifest.json">
